2007-06-06  David Hyatt  <hyatt@apple.com>

        Fix for bug 13972, quicktime doesn't respect CSS clip and overflow properties.
        Make sure that calls to [NSView visibleRect] will do the right thing for both
        Netscape plugins and WebKit plugins.

        Reviewed by olliej

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView visibleRect]):
        (-[WebBaseNetscapePluginView saveAndSetNewPortStateForUpdate:]):
        (-[WebBaseNetscapePluginView isOpaque]):
        * Plugins/WebKitPluginContainerView.h: Added.
        * Plugins/WebKitPluginContainerView.mm: Added.
        (-[WebKitPluginContainerView initWithFrame:DOMElement:]):
        (-[WebKitPluginContainerView dealloc]):
        (-[WebKitPluginContainerView visibleRect]):
        * Plugins/WebPluginController.mm:
        (-[WebPluginController destroyAllPlugins]):
        * WebCoreSupport/WebFrameBridge.mm:
        (-[WebFrameBridge pluginViewWithPackage:attributeNames:attributeValues:baseURL:DOMElement:loadManually:]):
        * WebKit.xcodeproj/project.pbxproj:
        * WebView/WebHTMLView.mm:
        (-[WebHTMLView addSubview:]):
        (-[WebHTMLView willRemoveSubview:]):

2007-06-04  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff and Justin.

        Fix for <rdar://problem/5246941> Clicking URL field on 
        Safari causes halt for a minute when using input methods.
        and <rdar://problem/5245964> Safari hangs for several 
        seconds when trying to select text using mouse
        
        This is a by product of the textStorage hack used to fix 
        rdar://problem/5000470 -- TSM calls textStorage repeatedly
        when changing focus, on certain mouse events, etc.  If there
        is no selection/editable region we repeatedly create an     
        NSAttributedString from the full document.  If the document is
        sufficiently long this starts consuming an inordinate amount of 
        time.
        